# Menverse

./: .gitignore  mkdocs.yml
.github/workflows/: pages.yml
docs/: index.md
docs/spec/: irp-auth.md  irp-conformance.md  irp-core.md  irp-extensions.md  irp-metering.md  irp-qos.md
irp/: .gitignore  README.md  pyproject.toml
irp/docs/spec/: irp-qos.md
irp/examples/: basic_verification.py  signed_receipt.py
irp/irp/: __init__.py  audit.py  client.py  discovery.py  errors.py  frame.py  handshake.py  models.py  qos.py  receipt.py  signer.py  tokenizer.py  version.py
irp/irp/server_ref/: __init__.py  app.py
irp/tests/: test_audit.py  test_discovery.py  test_errors.py  test_frame.py  test_handshake.py  test_irp.py  test_qos.py  test_schema_extensions.py  test_server_ref.py  test_version.py
research/: 01_internet_standards_history.md  02_regulatory_landscape.md  03_verifiable_computing.md  04_economics_settlement.md  05_ecosystem_analysis.md  06_market_pain_points.md  07_telecom_standards_history.md  08_ai_protocols_ecosystem.md  09_cloud_standardization_failures.md  SUMMARY_REPORT.md
