[project]
name = "irp"
version = "0.1.0"
description = "Inference Receipt Protocol - Client-side verifiable AI inference billing"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "pynacl>=1.6.2",
    "tiktoken>=0.12.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
